--- a/lineup/lineup.html
+++ b/lineup/lineup.html
@@ -11,11 +11,12 @@
         <header>
             <nav>
                 <a href="../index.html">Home</a>
-                <a href="about/about.html">About</a>
-                <a href="lineup/lineup.html">Lineup</a>
-                <a href="merch/merch.html">Merch</a>
+                <a href="../about/about.html">About</a>
+                <a href="../lineup/lineup.html">Lineup</a>
+                <a href="../merch/merch.html">Merch</a>
             </nav>
         </header>
 
-        <p>Home</p>
+        <p>line-up</p>
     </body>
+    
