--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <nav>
-                <a href="../index.html">Home</a>
+                <a href="">Home</a>
                 <a href="about/about.html">About</a>
                 <a href="lineup/lineup.html">Lineup</a>
                 <a href="merch/merch.html">Merch</a>
