--- a/index.html
+++ b/index.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Social Justice Festival</title>
 
-        <link rel="stylesheet", href="css/style.css" class="text">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social Justice Festival</title>
 
-    <body>
-        <header>
-            <nav>
-                <a href="">Home</a>
-                <a href="about/about.html">About</a>
-                <a href="lineup/lineup.html">Lineup</a>
-                <a href="merch/merch.html">Merch</a>
-            </nav>
-        </header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Pacifico&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" , href="css/style.css" class="text">
+</head>
 
-        <p>Home</p>
-    </body>
+<body>
+    <header>
+        <nav>
+            <a href="">Home</a>
+            <a href="about/about.html">About</a>
+            <a href="lineup/lineup.html">Lineup</a>
+            <a href="merch/merch.html">Merch</a>
+        </nav>
+    </header>
+    <div id="div1">
+        <h1>SAVE THE</h1>
+        <h1>FORESTS</h1>
+    </div>
+
+    <div id="div2">
+        <h3>
+            A Fundraising Festival
+        </h3>
+    </div>
+
+    <div>
+        <img src="img/aerial-view-evergreen-trees-deforest.jpg" id="top-image">
+    </div>
+
+    <h2 id="hh">About Forests</h2>
+    <div id="about">
+        <p>about forests</p>
+    </div>
+
+    <img src="img/beautiful-tree-covered-hill-captured-foggy-twilight-france.jpg" id="bottom-img">
+
+    <footer>
+        <a href="jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
+        <a>Donate</a>
+        <p>John King DES 228 2024</p>
+
+    </footer>
+</body>
