--- a/merch/merch.html
+++ b/merch/merch.html
@@ -2,20 +2,66 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Social Justice Festival</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Pacifico&display=swap"
+        rel="stylesheet">
         <link rel="stylesheet", href="css/style.css" class="text">
     </head>
 
     <body>
         <header>
             <nav>
-                <a href="../index.html">Home</a>
+                <a href="../index.html"><img src="img/Pin-2.png"></a>
                 <a href="../about/about.html">About</a>
                 <a href="../lineup/lineup.html">Lineup</a>
                 <a href="../merch/merch.html">Merch</a>
             </nav>
         </header>
 
-        <p>merch</p>
+        <h1>MERCH</h1>
+
+
+        <div>
+            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png">
+            <div id="inner-div">
+                <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
+                <p>Badge with festival logo and festival name</p>
+                <button>purchase</button>
+            </div>
+            <hr>
+        </div>
+
+        
+
+        <div>
+            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png">
+            <div id="inner-div">
+                <h3 id="title">Festival Logo Badge - $5.00</h3>
+                <p>Badge with festival logo</p>
+                <button>purchase</button>
+            </div>
+            <hr>
+        </div>
+
+        <div>
+            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png">
+            <div id="inner-div">
+                <h3 id="title">Festival Title Badge - $5.00</h3>
+                <p>Badge with festival name and description</p>
+                <button>purchase</button>
+            </div>
+            <hr>
+        </div>
+
+        <footer>
+            <a href="jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
+            <a>Donate</a>
+            <p>John King DES 228 2024</p>
+    
+        </footer>
     </body>
