--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="">Home</a>
+            <a href=""><img src="img/Pin-2.png"></a>
             <a href="about/about.html">About</a>
             <a href="lineup/lineup.html">Lineup</a>
             <a href="merch/merch.html">Merch</a>
