--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
 
     <h2 id="hh">About Forests</h2>
     <div id="about">
-        <p>about forests</p>
+        <p>Forests are large areas covered with trees. California is home to many forests with diverse
+            trees, such as redwoods and madrone trees. Many efforts have been made in an
+            attempt to replant forests after corporations have taken their resources, but now
+            forests are being threatened by fires. California has many forest fires and forests keep
+            becoming devestated, it is important to replant these forests in order to keep them
+            restored.
+        </p>
     </div>
 
     <img src="img/beautiful-tree-covered-hill-captured-foggy-twilight-france.jpg" id="bottom-img">
