--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <img src="img/beautiful-tree-covered-hill-captured-foggy-twilight-france.jpg" id="bottom-img">
 
     <footer>
-        <a href="jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
-        <a>Donate</a>
+        <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
+        <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate to Sempervirens</a>
         <p>John King DES 228 2024</p>
 
     </footer>
