--- a/merch/merch.html
+++ b/merch/merch.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Social Justice Festival</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social Justice Festival</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Pacifico&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet", href="css/style.css" class="text">
-    </head>
+    <link rel="stylesheet" , href="css/style.css" class="text">
+</head>
 
-    <body>
-        <header>
-            <nav>
-                <a href="../index.html"><img src="img/Pin-2.png"></a>
-                <a href="../about/about.html">About</a>
-                <a href="../lineup/lineup.html">Lineup</a>
-                <a href="../merch/merch.html">Merch</a>
-            </nav>
-        </header>
+<body>
+    <header>
+        <nav>
+            <a href="../index.html"><img src="img/Pin-2.png"></a>
+            <a href="../about/about.html">About</a>
+            <a href="../lineup/lineup.html">Lineup</a>
+            <a href="../merch/merch.html">Merch</a>
+        </nav>
+    </header>
+<div id="div1">
+    <h1>MERCH</h1>
+</div>
 
-        <h1>MERCH</h1>
 
-
-        <div>
-            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png">
-            <div id="inner-div">
-                <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
-                <p>Badge with festival logo and festival name</p>
-                <button>purchase</button>
-            </div>
-            <hr>
+    <div class="divs">
+        <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png">
+        <div class="divs", id="inner-div">
+            <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
+            <p>Badge with festival logo and festival name</p>
+            <button>purchase</button>
         </div>
+        <hr>
+    </div>
 
-        
 
-        <div>
-            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png">
-            <div id="inner-div">
-                <h3 id="title">Festival Logo Badge - $5.00</h3>
-                <p>Badge with festival logo</p>
-                <button>purchase</button>
-            </div>
-            <hr>
+
+    <div class="divs">
+        <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png">
+        <div class="divs", id="inner-div">
+            <h3 id="title">Festival Logo Badge - $5.00</h3>
+            <p>Badge with festival logo</p>
+            <button>purchase</button>
         </div>
+        <hr>
+    </div>
 
-        <div>
-            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png">
-            <div id="inner-div">
-                <h3 id="title">Festival Title Badge - $5.00</h3>
-                <p>Badge with festival name and description</p>
-                <button>purchase</button>
-            </div>
-            <hr>
+    <div class="divs">
+        <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png">
+        <div class="divs", id="inner-div">
+            <h3 id="title">Festival Title Badge - $5.00</h3>
+            <p>Badge with festival name and description</p>
+            <button>purchase</button>
         </div>
+        <hr>
+    </div>
 
-        <footer>
-            <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
-            <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate to Sempervirens</a>
-            <p>John King DES 228 2024</p>
-    
-        </footer>
-    </body>
+    <footer>
+        <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
+        <a
+            href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
+            to Sempervirens</a>
+        <p>John King DES 228 2024</p>
+
+    </footer>
+</body>
