--- a/merch/merch.html
+++ b/merch/merch.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div id="main">
     <header>
         <nav>
             <a href="../index.html"><img src="img/Pin-2.png"></a>
@@ -59,6 +60,7 @@
         </div>
         <hr>
     </div>
+</div>
 
     <footer>
         <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
