--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
 <body>
     <div id="main">
-    <header>
-        <nav>
-            <a href=""><img src="img/Pin-2.png"></a>
-            <a href="about/about.html">About</a>
-            <a href="lineup/lineup.html">Lineup</a>
-            <a href="merch/merch.html">Merch</a>
-        </nav>
-    </header>
-    <div class="flex" , id="div1">
-        <h1>SAVE THE FORESTS </br>
-            <p id="title">a fundraising festival</p>
-        </h1>
-    </div>
+        <header>
+            <nav>
+                <a href=""><img src="img/Pin-2.png"></a>
+                <a href="about/about.html">About</a>
+                <a href="lineup/lineup.html">Lineup</a>
+                <a href="merch/merch.html">Merch</a>
+            </nav>
+        </header>
+        <div class="flex" , id="div1">
+            <h1>SAVE THE FORESTS </br>
+                <p id="title">a fundraising festival</p>
+            </h1>
+        </div>
 
-    <div>
-        <img src="img/aerial-view-evergreen-trees-deforest.jpg" id="top-image">
+        <div>
+            <img src="img/aerial-view-evergreen-trees-deforest.jpg" id="top-image">
+        </div>
     </div>
-</div>
-    <div class="flex", id="div2">
+    <div class="flex" , id="div2">
         <h2>About Forests</h2>
         <p id="info">Forests are large areas covered with trees. California is home to many forests with diverse
             trees, such as redwoods and madrone trees. Many efforts have been made in an
@@ -43,9 +43,9 @@
             becoming devestated, it is important to replant these forests in order to keep them
             restored.
         </p>
-        
+
     </div>
-    
+
 
     <hr>
     <footer>
@@ -53,7 +53,7 @@
         <a
             href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
             to Sempervirens</a>
-        <p>John King DES 228 2024</p>
+        <p>John King</p>
 
     </footer>
 
@@ -63,4 +63,5 @@
 body flexbox?
 other orginnaztio
 clean code
+
 media-->
