--- a/merch/merch.html
+++ b/merch/merch.html
@@ -16,58 +16,58 @@
 
 <body>
     <div id="main">
-    <header>
-        <nav>
-            <a href="../index.html"><img src="img/Pin-2.png"></a>
-            <a href="../about/about.html">About</a>
-            <a href="../lineup/lineup.html">Lineup</a>
-            <a href="../merch/merch.html">Merch</a>
-        </nav>
-    </header>
-<div id="div1">
-    <h1>MERCH</h1>
-</div>
-
-
-    <div class="divs">
-        <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png">
-        <div class="divs", id="inner-div">
-            <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
-            <p>Badge with festival logo and festival name</p>
-            <button>purchase</button>
+        <header>
+            <nav>
+                <a href="../index.html"><img src="img/Pin-2.png"></a>
+                <a href="../about/about.html">About</a>
+                <a href="../lineup/lineup.html">Lineup</a>
+                <a href="../merch/merch.html">Merch</a>
+            </nav>
+        </header>
+        <div id="div1">
+            <h1>MERCH</h1>
         </div>
-        <hr>
-    </div>
 
 
-
-    <div class="divs">
-        <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png">
-        <div class="divs", id="inner-div">
-            <h3 id="title">Festival Logo Badge - $5.00</h3>
-            <p>Badge with festival logo</p>
-            <button>purchase</button>
+        <div class="divs">
+            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png">
+            <div class="divs" , id="inner-div">
+                <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
+                <p>Badge with festival logo and festival name</p>
+                <button>purchase</button>
+            </div>
+            <hr>
         </div>
-        <hr>
-    </div>
 
-    <div class="divs">
-        <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png">
-        <div class="divs", id="inner-div">
-            <h3 id="title">Festival Title Badge - $5.00</h3>
-            <p>Badge with festival name and description</p>
-            <button>purchase</button>
+
+
+        <div class="divs">
+            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png">
+            <div class="divs" , id="inner-div">
+                <h3 id="title">Festival Logo Badge - $5.00</h3>
+                <p>Badge with festival logo</p>
+                <button>purchase</button>
+            </div>
+            <hr>
         </div>
-        <hr>
+
+        <div class="divs">
+            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png">
+            <div class="divs" , id="inner-div">
+                <h3 id="title">Festival Title Badge - $5.00</h3>
+                <p>Badge with festival name and description</p>
+                <button>purchase</button>
+            </div>
+            <hr>
+        </div>
     </div>
-</div>
 
     <footer>
         <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu</a>
         <a
             href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
             to Sempervirens</a>
-        <p>John King DES 228 2024</p>
+        <p>John King</p>
 
     </footer>
 </body>
