--- a/about/about.html
+++ b/about/about.html
@@ -1,21 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Social Justice Festival</title>
 
-        <link rel="stylesheet", href="css/style.css" class="text">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social Justice Festival</title>
 
-    <body>
-        <header>
-            <nav>
-                <a href="../index.html">Home</a>
-                <a href="../about/about.html">About</a>
-                <a href="../lineup/lineup.html">Lineup</a>
-                <a href="../merch/merch.html">Merch</a>
-            </nav>
-        </header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Pacifico&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" , href="css/style.css" class="text">
+</head>
 
-        <p>about</p>
-    </body>
+<body>
+    <header>
+        <nav>
+            <a href="../index.html"><img src="../img/Pin-2.png"></a>
+            <a href="../about/about.html">About</a>
+            <a href="../lineup/lineup.html">Lineup</a>
+            <a href="../merch/merch.html">Merch</a>
+        </nav>
+    </header>
+
+    <h1>ABOUT</h1>
+
+    <div id="div1" class="divs">
+        <div id="inner-div" class="divs">
+            <h3>About Forests</h3>
+            <p>Forests are large areas covered with trees. California is home to many forests with diverse
+                trees, such as redwoods and madrone trees. Many efforts have been made in an
+                attempt to replant forests after corporations have taken their resources, but now
+                forests are being threatened by fires. California has many forest fires and forests keep
+                becoming devestated, it is important to replant these forests in order to keep them
+                restored.</p>
+        </div>
+
+        <div id="inner-img"></div>
+
+        <div id="div2">
+            <h3>Sempervirens</h3>
+            <p>Our festival is working together with an organization called Sempervirens. This organization uses support
+                and donations in order to protect coast redwoods. They improve habiatats, and enhance forest resilience
+                to achieve their goal. </p>
+        </div>
+
+        <hr>
+
+        <footer>
+            <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu &nbsp;</a>
+            <a
+                href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
+                to Sempervirens &nbsp;</a>
+            <p>John King &nbsp;</p>
+
+        </footer>
+
+</body>
