--- a/about/about.html
+++ b/about/about.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="../index.html"><img src="../img/Pin-2.png"></a>
+            <a href="../index.html"><img src="../img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
             <a href="../about/about.html">About</a>
             <a href="../lineup/lineup.html">Lineup</a>
             <a href="../merch/merch.html">Merch</a>
@@ -37,7 +37,7 @@
                 restored.</p>
         </div>
 
-        <div id="inner-img"></div>
+        <div id="inner-img" title="an image of a forest fire that turns into a normal forest when hovered on"></div>
 
         <div id="div2">
             <h3>Sempervirens</h3>
