--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="main">
         <header>
             <nav>
-                <a href=""><img src="img/Pin-2.png"></a>
+                <a href=""><img src="img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
                 <a href="about/about.html">About</a>
                 <a href="lineup/lineup.html">Lineup</a>
                 <a href="merch/merch.html">Merch</a>
@@ -31,11 +31,11 @@
         </div>
 
         <div>
-            <img src="img/aerial-view-evergreen-trees-deforest.jpg" id="top-image">
+            <img src="img/aerial-view-evergreen-trees-deforest.jpg" id="top-image" alt="image of a full green forest">
         </div>
     </div>
     <div class="flex" , id="div2">
-        <h2>About Forests</h2>
+        <h2>About Us</h2>
         <p id="info">Forests are large areas covered with trees. California is home to many forests with diverse
             trees, such as redwoods and madrone trees. Many efforts have been made in an
             attempt to replant forests after corporations have taken their resources, but now
@@ -60,10 +60,9 @@
 </body>
 
 <!--to-do
-body flexbox?
 other orginnaztio
 clean code
-alt
-shadow
+change about
+clean
 
 media-->
