--- a/lineup/lineup.html
+++ b/lineup/lineup.html
@@ -1,22 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Social Justice Festival</title>
 
-        <link rel="stylesheet", href="css/style.css" class="text">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social Justice Festival</title>
 
-    <body>
-        <header>
-            <nav>
-                <a href="../index.html">Home</a>
-                <a href="../about/about.html">About</a>
-                <a href="../lineup/lineup.html">Lineup</a>
-                <a href="../merch/merch.html">Merch</a>
-            </nav>
-        </header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Pacifico&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" , href="css/style.css" class="text">
+</head>
 
-        <p>line-up</p>
-    </body>
-    
+<body>
+    <header>
+        <nav>
+            <a href="../index.html"><img src="../img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
+            <a href="../about/about.html">About</a>
+            <a href="../lineup/lineup.html">Lineup</a>
+            <a href="../merch/merch.html">Merch</a>
+        </nav>
+    </header>
+
+    <h1>LINEUP</h1>
+
+    <div>
+        <h3>Forest Animal Education</h3>
+    </div>
+    <p class="title">Saturday, April 19</p>
+    <div class="description-div">
+        <img src="img/deer-with-small-horns-orange-fur-lush-greenery-forest-moldova.jpg" class="images" alt="a deer standing in a forest">
+        <p class="info">
+            Spend the day learning about forest animals and their habitats. Information on how to protect their
+            environment. Special appearence by deer, racoons, squirrels, owls and more!
+        </p>
+    </div>
+
+    <div>
+        <h3>Clean Air</h3>
+    </div>
+    <p class="title">Saturday, April 19</p>
+    <div class="description-div">
+        <img src="img/beautiful-landscape-summer-carpathian-mountains.jpg" class="images" alt="image of a mountain and sky on a bright day">
+        <p class="info">
+            Spend the day learning about the air and how forests keep them clear. Information on clean air and how to do
+            your part.
+            Special Appearence by Sabrina Carpenter!
+        </p>
+    </div>
+
+    <div>
+        <h3>Help Prevent Forest fires</h3>
+    </div>
+    <p class="title">Sunday, April 20</p>
+    <div class="description-div">
+        <img src="img/smoke-covering-mountain-medvednica.jpg" class="images" alt="image of a forest with smoke">
+        <p class="info">
+            Spend the day learning about forest fires and why they happen. Information on how to camp safely and help
+            prevent fores fires. Special appearence by Olivia Rodrigo!
+        </p>
+    </div>
+
+    <div>
+        <h3>Gather Resources</h3>
+    </div>
+    <p class="title">Sunday, April 20</p>
+    <div class="description-div">
+        <img src="img/reforestation-done-by-voluntary-group.jpg" class="images" alt="image of a volunteer replanting trees in a forest">
+        <p class="info">
+            Spend the day learning how to collect resources from forests without destroying them. Information for
+            citizens and businesses. Information on planting trees. Special appearences by California Lumberjacks who
+            intelligently collect resources!
+        </p>
+    </div>
+
+    <div>
+        <h3>How to Help</h3>
+    </div>
+    <p class="title">Monday, April 21</p>
+    <div class="description-div">
+        <img src="img/close-up-male-hiker-looking-tree-branch.jpg" class="images" alt="close up image of man holding a plant in a forest">
+        <p class="info">
+            Spend the day learning how to support forests. Information on how to prevent deforestation, and how to replant them if it occurs. Information on recycling and environmental help.
+            Special appearences by California forest animals, Sabrina Carpenter, Olivia Rodrigo, California Lumberjacks, and more!
+        </p>
+    </div>
+
+    <hr>
+
+    <footer>
+        <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu &nbsp;</a>
+        <a
+            href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjCvvGPiO-JAxUZKUQIHQm9KekYABACGgJkeg&co=1&gclid=Cj0KCQiA0fu5BhDQARIsAMXUBOJOu-Eh62y2o8RQWU76P0P3foGS-IFYatksjRE3eiJxVVaY2CdwKjwaAmGsEALw_wcB&ohost=www.google.com&cid=CAESV-D2N7tHm5qjY-xZ3JVx1bbOOa6fTKonJWimyiJbSXDF59QDcRCEj5HQLEJY8Hc6UJZOVpcdZXBGQdsySo38eZvBwwAwHkIa4lBAu4ZsDAqVS5IFw2BkBQ&sig=AOD64_2McZ07-b8rH2-ijmWF__UOUwaepg&q&adurl&ved=2ahUKEwjVhO2PiO-JAxW6JUQIHf2nAsIQ0Qx6BAgNEAE&nis=2">Donate
+            to Sempervirens &nbsp;</a>
+        <p>John King &nbsp;</p>
+
+    </footer>
+
+</body>
