--- a/merch/merch.html
+++ b/merch/merch.html
@@ -18,7 +18,7 @@
     <div id="main">
         <header>
             <nav>
-                <a href="../index.html"><img src="img/Pin-2.png"></a>
+                <a href="../index.html"><img src="img/Pin-2.png" alt="drawing of a tree in front of the earth"></a>
                 <a href="../about/about.html">About</a>
                 <a href="../lineup/lineup.html">Lineup</a>
                 <a href="../merch/merch.html">Merch</a>
@@ -30,7 +30,7 @@
 
 
         <div class="divs">
-            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png">
+            <img src="img/Screen Shot 2024-11-21 at 4.39.30 PM.png" alt="image of a pin with a drawing of a tree in front of the earth and the words save the forests a fundraising festival wirrten in white">
             <div class="divs" , id="inner-div">
                 <h3 id="title">Festival Titled Logo Badge - $5.00</h3>
                 <p>Badge with festival logo and festival name</p>
@@ -42,7 +42,7 @@
 
 
         <div class="divs">
-            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png">
+            <img src="img/Screen Shot 2024-11-21 at 6.05.49 PM.png" alt="image of a pin with an image of a tree in front of the earth">
             <div class="divs" , id="inner-div">
                 <h3 id="title">Festival Logo Badge - $5.00</h3>
                 <p>Badge with festival logo</p>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="divs">
-            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png">
+            <img src="img/Screen Shot 2024-11-21 at 6.10.54 PM.png" alt="image of a blue and green button with the words save the forests a fundraising festival on it">
             <div class="divs" , id="inner-div">
                 <h3 id="title">Festival Title Badge - $5.00</h3>
                 <p>Badge with festival name and description</p>
