--- a/about/about.html
+++ b/about/about.html
@@ -42,7 +42,7 @@
         <div id="div2">
             <h3>Sempervirens</h3>
             <p>Our festival is working together with an organization called Sempervirens. This organization uses support
-                and donations in order to protect coast redwoods. They improve habiatats, and enhance forest resilience
+                and donations in order to protect coast redwoods. They improve habitats, and enhance forest resilience
                 to achieve their goal. </p>
         </div>
 
