--- a/index.html
+++ b/index.html
@@ -39,20 +39,18 @@
     </div>
 
     <div class="flex" , id="div2">
-        
+
         <h2>About Us</h2>
-        <p id="info">Forests are large areas covered with trees. California is home to many forests with diverse
-            trees, such as redwoods and madrone trees. Many efforts have been made in an
-            attempt to replant forests after corporations have taken their resources, but now
-            forests are being threatened by fires. California has many forest fires and forests keep
-            becoming devestated, it is important to replant these forests in order to keep them
-            restored.
+        <p id="info">We are a festival taking place in order to benefit the forests. This festival takes place over
+            Earth Day weekend in Golden Gate Park in San Francisco. Out festival partnered with Sempervirens in order to
+            collect donations, read more about them in the 'About' tab. See the events lineup in 'Lineup', and checkout
+            our merch!
         </p>
 
     </div>
 
     <hr>
-    
+
     <footer>
 
         <a href="mailto:jking4@sfsu.edu">Contact Us: jking4@sfsu.edu &nbsp;</a>
@@ -66,7 +64,5 @@
 </body>
 
 <!--to-do
-change about
 resource
 media-->
-
