--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <h2>About Us</h2>
         <p id="info">We are a festival taking place in order to benefit the forests. This festival takes place over
-            Earth Day weekend in Golden Gate Park in San Francisco. Out festival partnered with Sempervirens in order to
+            Earth Day weekend in Golden Gate Park in San Francisco. Our festival partnered with Sempervirens in order to
             collect donations, read more about them in the 'About' tab. See the events lineup in 'Lineup', and checkout
             our merch!
         </p>
