--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <div class="flex" , id="div1">
             <h1>SAVE THE FORESTS </br>
-                <p id="title">a fundraising festival</p>
+                <p id="title">A Fundraising Festival</p>
+                <p id="title">Golden Gate Park April 19-21</p>
             </h1>
         </div>
 
