--- a/lineup/lineup.html
+++ b/lineup/lineup.html
@@ -26,10 +26,12 @@
 
     <h1>LINEUP</h1>
 
-    <p class="title">Saturday, April 19 in Golden Gate Park</p>
+    <hr>
+
     <div>
         <h3>Forest Animal Education</h3>
     </div>
+    <p class="title">Saturday, April 19 1:00pm in the Lindley Meadow</p>
     <div class="description-div">
         <img src="img/deer-with-small-horns-orange-fur-lush-greenery-forest-moldova.jpg" class="images" alt="a deer standing in a forest">
         <p class="info">
@@ -38,9 +40,12 @@
         </p>
     </div>
 
+    <hr>
+
     <div>
         <h3>Clean Air</h3>
     </div>
+    <p class="title">Saturday, April 19 3:00pm in the Shakespeare Garden</p>
     <div class="description-div">
         <img src="img/beautiful-landscape-summer-carpathian-mountains.jpg" class="images" alt="image of a mountain and sky on a bright day">
         <p class="info">
@@ -52,10 +57,10 @@
 
     <hr>
 
-    <p class="title">Sunday, April 20 in Golden Gate Park</p>
     <div>
         <h3>Help Prevent Forest fires</h3>
     </div>
+    <p class="title">Sunday, April 20 12:00pm in the Japanese Tea Garden</p>
     <div class="description-div">
         <img src="img/smoke-covering-mountain-medvednica.jpg" class="images" alt="image of a forest with smoke">
         <p class="info">
@@ -64,9 +69,12 @@
         </p>
     </div>
 
+    <hr>
+
     <div>
         <h3>Gather Resources</h3>
     </div>
+    <p class="title">Sunday, April 20 4:00pm on the Crosstown Trail</p>
     <div class="description-div">
         <img src="img/reforestation-done-by-voluntary-group.jpg" class="images" alt="image of a volunteer replanting trees in a forest">
         <p class="info">
@@ -78,11 +86,10 @@
 
     <hr>
 
-    <p class="title">Monday, April 21 in Golden Gate Park</p>
     <div>
         <h3>How to Help</h3>
     </div>
-    
+    <p class="title">Monday, April 21 7:00pm on the polo field</p>
     <div class="description-div">
         <img src="img/close-up-male-hiker-looking-tree-branch.jpg" class="images" alt="close up image of man holding a plant in a forest">
         <p class="info">
